# schrodingerlib

./: .gitignore  BallCanvas.cpp  BallCanvas.h  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  animated_canvas.cpp  audio_analysis.ipynb  ball.cpp  bug.txt  cic_charge_near_dipole.ipynb  electrons.ipynb  heat.ipynb  leapfrog-1D.ipynb  leapfrog-3D.ipynb  leapfrog.ipynb  main.cpp  pic_electron.py  root_finders.ipynb  schrodingerlib.cpp  schrodingerlib.hpp  shar_flight.cpp  vcpkg.json
numerical_analysis/: CMakeLists.txt  main.cpp
numerical_analysis/audio/: AudioProcessor.cpp  AudioProcessor.h
numerical_analysis/dipole/: DipoleSimulation.cpp  DipoleSimulation.h
numerical_analysis/heat/: HeatEquation.cpp  HeatEquation.h
numerical_analysis/integration/: Environment.cpp  Environment.h  Leapfrog.cpp  Leapfrog.h  Rocket.cpp  Rocket.h
numerical_analysis/polynomial/: Polynomial.cpp  Polynomial.h
